[gd_scene load_steps=8 format=2]

[ext_resource path="res://fonts/QuickSand/Quicksand-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scenes/components/LevelSelector.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.458824, 0.458824, 0.458824, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.188235, 0.188235, 0.188235, 1 )

[sub_resource type="DynamicFont" id=1]
size = 32
extra_spacing_char = 2
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 14
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 1 )

[node name="LevelSelectorButton" type="Button"]
anchor_right = 1.0
margin_left = 20.0
margin_top = 150.0
margin_right = -20.0
margin_bottom = 250.0
rect_scale = Vector2( 0.99872, 1 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelSelectorContainer" type="GridContainer" parent="."]
margin_right = 559.0
margin_bottom = 99.0
grow_horizontal = 2
grow_vertical = 0
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelInfoContainer" type="GridContainer" parent="LevelSelectorContainer"]
margin_right = 420.0
margin_bottom = 99.0

[node name="LevelNameLabel" type="Label" parent="LevelSelectorContainer/LevelInfoContainer"]
margin_right = 420.0
margin_bottom = 45.0
rect_min_size = Vector2( 420, 45 )
custom_fonts/font = SubResource( 1 )
text = "  Level"
valign = 1

[node name="LevelProgressLabel" type="Label" parent="LevelSelectorContainer/LevelInfoContainer"]
margin_top = 49.0
margin_right = 420.0
margin_bottom = 99.0
rect_min_size = Vector2( 420, 50 )
custom_fonts/font = SubResource( 2 )
text = "          ProÄ‘ena sva pitanja: 0
          Trenutno odgovorena pitanja: 0/0"
valign = 1

[node name="HighScoreLabel" type="Label" parent="LevelSelectorContainer"]
margin_left = 424.0
margin_right = 524.0
margin_bottom = 99.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 8
size_flags_vertical = 1
custom_fonts/font = SubResource( 3 )
text = "Highscore:
0"
align = 1
valign = 1
